<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_blackk_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/bottom_playlist"
        android:title="@string/title_playlist" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_white_64dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/bottom_notification"
        android:iconTint="@color/nav_white"
        android:title="@string/title_notification"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/bottom_profile"
        android:title="@string/title_user" />

</menu>
