<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_pin"
        android:iconTint="@color/white"
        android:title="@string/pin_playlist"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_playlist"
        android:iconTint="@color/white"
        android:title="@string/share_playlist"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_like"
        android:icon="@drawable/heart_selector"
        android:iconTint="@color/white"
        android:title="@string/like_playlist"
        app:showAsAction="always" />

</menu>