<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Platform_choose_activity">
    <group android:checkableBehavior="single">
        <item android:title="Choose a Platform">
            <menu>
                <item
                    android:id="@+id/youtube_platform"
                    android:icon="@drawable/ic_icons8_play_button"
                    android:title="@string/nav_yt" />
                <item
                    android:id="@+id/spotify_platform"
                    android:icon="@drawable/ic_icons8_spotify"
                    android:title="@string/nav_spot" />
            </menu>
        </item>
    </group>
    <item android:title="Extras">
        <menu>
            <item
                android:id="@+id/settings_nav"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>
</menu>