<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/ic_dashboard_wave"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/linearlayout"
        android:indeterminateBehavior="repeat"
        android:indeterminateDuration="10"
        android:indeterminateOnly="true"
        android:maxHeight="24dip"
        android:minHeight="24dip"
        android:progressBackgroundTint="#208afa"
        android:progressBackgroundTintMode="multiply"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/unread_head_hldr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/unread"
            android:textColor="@color/gph_dark_grey"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/mark_read_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:background="@color/gph_transparent"
            android:gravity="center"
            android:text="@string/mark_as_read"
            android:textColor="#208afa"
            android:textSize="@dimen/_10sdp"
            android:textStyle="italic|bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notification_unread_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:clipToPadding="false"
        android:visibility="visible" />


    <RelativeLayout
        android:id="@+id/read_head_hldr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/earlier"
            android:textColor="@color/gph_dark_grey"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notification_read_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:clipToPadding="false" />


</LinearLayout>