<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/font_extra_bold"
            android:padding="@dimen/_4sdp"
            android:text="@string/playlists"
            android:textSize="24sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp">

                <TextView
                    android:id="@+id/tv_pinned_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_2sdp"
                    android:fontFamily="@font/font_bold"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/pinned"
                    android:textColor="@color/color_4C00E9"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_pin_playlist"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_pinned_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_primary"
                    app:layout_constraintBottom_toBottomOf="@id/tv_pinned_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_pinned_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_no_pinned_playlist_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/font_extra_bold"
                    android:text="@string/highlight"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_pinned_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_no_pinned_playlist_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/long_press_and_hold_playlist_card_to_pin_it"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_no_pinned_playlist_title" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_no_pinned_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tv_no_pinned_playlist_subtitle, tv_no_pinned_playlist_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_pinned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_pinned_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_pinned_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="rv_pinned, tv_no_pinned_playlist_subtitle" />

                <TextView
                    android:id="@+id/tv_private_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/font_bold"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/private_"
                    android:textColor="@color/color_4C00E9"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier_pinned_playlist" />

                <ImageView
                    android:id="@+id/iv_private_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_primary"
                    app:layout_constraintBottom_toBottomOf="@id/tv_private_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_private_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_no_private_playlist_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/font_extra_bold"
                    android:text="@string/shh_password_protected"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_private_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_no_private_playlist_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/hide_your_guily_pleasures_no_one_will_know"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_no_private_playlist_title" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_no_private_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tv_no_private_playlist_subtitle, tv_no_private_playlist_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_private"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_private_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_private_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="rv_private, tv_no_private_playlist_subtitle" />

                <TextView
                    android:id="@+id/tv_collab_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/font_bold"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/collaborative"
                    android:textColor="@color/color_4C00E9"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier_private_playlist" />

                <ImageView
                    android:id="@+id/iv_collab_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_primary"
                    app:layout_constraintBottom_toBottomOf="@id/tv_collab_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_collab_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_collab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_collab_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>